Css changes to the main page

--- a/project/Binf/styles/mainPageStyleSheet.css
+++ b/project/Binf/styles/mainPageStyleSheet.css
@@ -7,3 +7,14 @@
     padding: 15px;
     background-color: #C1DAD6;
 }
+
+#logIn, #signUp{
+    margin: 50px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color:aliceblue;
+    color:slategray;
+    font-size: 1.5em;
+    text-align: center;
+}
