--- a/project/Binf/styles/styles-container.css
+++ b/project/Binf/styles/styles-container.css
@@ -6,4 +6,5 @@
     border-radius: 15px;
     padding: 15px;
     background-color: #C1DAD6;
+    font-family: "Buxton Sketch", "calibri", "arial";
 }
