--- a/project/Binf/styles/styles-main.css
+++ b/project/Binf/styles/styles-main.css
@@ -1,10 +1,9 @@
-﻿#log-in, #sign-up{
+#log-in, #sign-up{
     margin: 50px;
     padding: 10px;
-    border-radius: 10px;
     border: 1px solid black;
     background-color:aliceblue;
-    color:slategray;
+    color: slategray;
     font-size: 1.5em;
     text-align: center;
 }
