--- a/project/Binf/styles/styles-container.css
+++ b/project/Binf/styles/styles-container.css
@@ -6,10 +6,5 @@
     border-radius: 10px;
     padding: 15px;
     background-color: #C1DAD6;
-    font-family: "Buxton Sketch", "calibri", "arial";
-    
-}
-
-#container label {
-    font-size: 1.5em;
+    font-family: "Buxton Sketch", "Calibri", "Arial";
 }
