--- a/project/Binf/styles/styles-registration.css
+++ b/project/Binf/styles/styles-registration.css
@@ -1,3 +1,7 @@
-#registration-content>label {
+#registration-content > label {
+    font-size: 1.5em;
+}
+
+#registration-content > input {
     font-size: 1.5em;
 }
