--- a/project/Binf/styles/styles-registration.css
+++ b/project/Binf/styles/styles-registration.css
@@ -1,7 +1,14 @@
-#registration-content > label {
+#registration-content label {
     font-size: 1.5em;
 }
 
-#registration-content > input {
+#registration-content input, textarea {
     font-size: 1.5em;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color:aliceblue;
+    color: slategray;
+    font-size: 1.5em;
+    text-align: center;
+    max-width: 300px;
 }
