--- a/project/Binf/styles/styles-container.css
+++ b/project/Binf/styles/styles-container.css
@@ -19,6 +19,16 @@
 #bottom-menu{
     height: 80px;
     background-color: #B7AFA3;
+    margin: 0;
+    padding: 0;
+}
+
+#bottom-menu .bottom-menu-button {
+    margin: 0;
+    padding: 0;
+    width: 80px;
+    height: 80px;
+    float: left;
 }
 
 #main-content {
