--- a/project/Binf/styles/styles-container.css
+++ b/project/Binf/styles/styles-container.css
@@ -1,3 +1,4 @@
+/*Main Container*/
 #container {
     width: 400px;
     height: 480px;
@@ -11,11 +12,27 @@
 #registration-title{
     text-align:center;
 }
+
+/*Top Menu*/
 #top-menu {
-    height: 120px;
-    background-color: #B7AFA3;
+    height: 140px;
+    background-color: #6D929B;
 }
 
+#top-menu p {
+    margin: 0;
+    padding: 5px 0 0 0;
+    font-size: 1.1em;
+}
+
+
+#target-profile-picture {
+    border: 1px solid black;
+    margin: 4px;
+    float: left;
+}
+
+/*Bottom Menu*/
 #bottom-menu{
     height: 80px;
     background-color: #B7AFA3;
@@ -29,8 +46,11 @@
     width: 80px;
     height: 80px;
     float: left;
+    border: 1px solid black;
 }
 
+/*Main Content*/
 #main-content {
-    height: 280px;
+    height: 260px;
+    border: 2px solid #B7AFA3;
 }
