--- a/project/Binf/styles/styles-login.css
+++ b/project/Binf/styles/styles-login.css
@@ -8,7 +8,7 @@
 
 #log-in label {
     font-size: 1.5em;
-    margin-left: 25px;
+    margin-left: 30px;
 }
 
 #login-nickname, #login-password {
@@ -21,7 +21,7 @@
     color: slategray;
     font-size: 1.5em;
     text-align: center;
-    margin-bottom: 5px;
+    margin-left: 37px;
 }
 
 #login-button {
@@ -33,7 +33,7 @@
     color: slategray;
     font-size: 1.5em;
     text-align: center;
-    max-width: 300px;
+    min-width: 300px;
     font-family: "Buxton Sketch";
 }
 
