--- a/project/Binf/styles/styles-login.css
+++ b/project/Binf/styles/styles-login.css
@@ -12,8 +12,8 @@
 }
 
 #login-nickname, #login-password {
-    max-width: 200px;
-    font-family: "Buxton Sketch";
+    max-width: 220px;
+    font-family: "Buxton Sketch", "Calibri", "Arial";
     font-size: 1.5em;
     border: 1px solid black;
     border-radius: 10px;
@@ -21,11 +21,11 @@
     color: slategray;
     font-size: 1.5em;
     text-align: center;
-    margin-left: 37px;
+    margin-left: 17px;
 }
 
 #login-button {
-    margin: 70px 50px 0px 50px;
+    margin: 50px 50px 0px 50px;
     padding: 10px;
     border: 1px solid black;
     border-radius: 10px;
@@ -34,6 +34,6 @@
     font-size: 1.5em;
     text-align: center;
     min-width: 300px;
-    font-family: "Buxton Sketch";
+    font-family: "Buxton Sketch", "Calibri", "Arial";
 }
 
