--- a/project/Binf/styles/styles-registration.css
+++ b/project/Binf/styles/styles-registration.css
@@ -12,15 +12,15 @@
     color: slategray;
     font-size: 1.5em;
     text-align: center;
-    max-width: 200px;
+    max-width: 220px;
     font-family: "Buxton Sketch", "Calibri", "Arial";
 }
 
 #registration-content textarea {
-    max-width: 195px;
+    max-width: 215px;
     max-height: 50px;
 }
 
 #registration-content button {
-    margin: 25px;
+    margin: 15px 25px 15px 50px;
 }
