--- a/project/Binf/styles/styles-registration.css
+++ b/project/Binf/styles/styles-registration.css
@@ -21,6 +21,8 @@
     max-height: 50px;
 }
 
-#registration-content button {
+#registration-submit {
     margin: 15px 25px 15px 50px;
+    padding: 10px;
+    min-width: 300px;
 }
