--- a/project/Binf/styles/styles-main.css
+++ b/project/Binf/styles/styles-main.css
@@ -1,5 +1,5 @@
 #main-log-in, #main-sign-up{
-    margin: 70px 50px 0px 50px;
+    margin: 50px 50px 0px 50px;
     padding: 10px;
     border: 1px solid black;
     border-radius: 10px;
@@ -8,4 +8,9 @@
     font-size: 1.5em;
     text-align: center;
     min-width: 300px;
+    font-family: "Buxton Sketch", "Calibri", "Arial";
+}
+
+#title{
+    text-align:center;
 }
