Changed search input margin-left form 17px to 39px

--- a/project/Binf/styles/styles-search.css
+++ b/project/Binf/styles/styles-search.css
@@ -16,6 +16,7 @@
     color: slategray;
     font-size: 1.5em;
     text-align: center;
+    margin-left:39px;
     max-width: 220px;
     font-family: "Buxton Sketch", "Calibri", "Arial";
 }
